--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- /*
-* Template Name: Sterial
-* Template Author: Untree.co
-* Tempalte URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -31,7 +25,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 
-	<title>Sterial &mdash; Free Bootstrap 5 Website Template by Untree.co </title>
+	<title>AVENTOUR &mdash; Free Bootstrap 5 Website Template by Untree.co </title>
 </head>
 <body>
 
